--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,5 +8,9 @@
         display: block;
         width: 100%;
         height: 100%;
+
+        agm-snazzy-info-window {
+            width: 500px;
+        }
     }
 }
